fix jumpy textbox

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -62,9 +62,7 @@
 	}
 
 	:is(input[type='text'], input[type='url'], textarea):focus {
-		margin-bottom: -1px;
-		border-bottom-width: 2px;
-		border-bottom-color: var(--accentFill);
+		box-shadow: 0px 2px 0px -0.5px var(--accentFill);
 	}
 
 	:is(input[type='text'], input[type='url'], textarea)::placeholder {
@@ -77,6 +75,10 @@
 		border-width: 1px;
 		border-color: var(--controlStroke);
 		@apply rounded-control p-1 px-2;
+	}
+	hr {
+		border-color: var(--dividerStroke);
+		border-width: 1px;
 	}
 }
 
